# gtest_task

./: CMakeLists.txt  README.md  build_and_test.sh  environment_setup.sh  test.cpp
inc/: algorithm.h
src/: algorithm.cpp
